# Samsung-Academy-project

проект самсунга/info.html/: conect.php  cont.php  index.html  services.html
проект самсунга/releas/: CMakeLists.txt  main.cpp  releas.cpp
