cmake_minimum_required(VERSION 2.8)
project(releas)
find_package(Threads REQUIRED)
find_package( OpenCV REQUIRED )
find_package( PkgConfig REQUIRED)
pkg_search_module( TESSERACT REQUIRED tesseract )
pkg_search_module( LEPTONICA REQUIRED lept )
include_directories( ${TESSERACT_INCLUDE_DIRS} )
include_directories( ${LEPTONICA_INCLUDE_DIRS} )
link_directories( ${TESSERACT_LIBRARY_DIRS} )
link_directories( ${LEPTONICA_LIBRARY_DIRS} )
add_executable(releas releas.cpp libSonar.cpp)


if(THREADS_HAVE_PTHREAD_ARG)
  target_compile_options(releas PUBLIC "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
  target_link_libraries(releas "${CMAKE_THREAD_LIBS_INIT}")
endif()
target_link_libraries( releas ${OpenCV_LIBS} )
target_link_libraries( releas ${TESSERACT_LIBRARIES} )
target_link_libraries( releas ${LEPTONICA_LIBRARIES} )
target_link_libraries( releas wiringPi)